# CMake-Learning

Ep002/source/: CMakeLists.txt  main.cpp
Ep005/source/: CMakeLists.txt  main.cpp
Ep005/source/include/: cat.h  dog.h  operations.h
Ep005/source/src/: cat.cpp  dog.cpp  operations.cpp
